syntax = "proto3";

package pb;

option go_package = "";

service Book {
  rpc InsertBook (InsertBookRequest) returns (InsertBookResponse);
  rpc BorrowBook (BorrowBookRequest) returns (BorrowBookResponse);
  rpc ReturnBook (ReturnBookRequest) returns (ReturnBookResponse);
}

message BorrowBookRequest {
  string Id = 1;
}

message BorrowBookResponse {
  string message = 1;
}

message ReturnBookRequest {
  string Id = 1;
}

message ReturnBookResponse {
  string message = 1;
}

message InsertBookRequest {
  string Title = 1;
  string AuthorId = 1;
  string Stock = 1;
}

message InsertBookResponse {
  string message = 1;
}
