syntax = "proto3";

package bookpb;

option go_package = "pb/BookService";

service Book {
  rpc InsertBook (InsertBookRequest) returns (InsertBookResponse);
  rpc BorrowBook (BorrowBookRequest) returns (BorrowBookResponse);
  rpc ReturnBook (ReturnBookRequest) returns (ReturnBookResponse);
  rpc GetBookIdByTitle (GetBookIdByTitleRequest) returns (GetBookIdByTitleResponse);
}

message InsertBookRequest {
  string Title = 1;
  int32 Stock = 2;
  string AuthorEmail = 3;
}

message InsertBookResponse {
  string message = 1;
}

message BorrowBookRequest {
  string Title = 1;
  string BorrowerEmail = 2;
}

message BorrowBookResponse {
  string message = 1;
}

message ReturnBookRequest {
  string Title = 1;
  string ReturnerEmail = 2;
}

message ReturnBookResponse {
  string message = 1;
}

message GetBookIdByTitleRequest {
  string Title = 1;
}

message GetBookIdByTitleResponse {
  string bookId = 1;
}

