syntax = "proto3";

package categorypb;

option go_package = "pb/CategoryService";

service Category {
  rpc InsertCategory (InsertCategoryRequest) returns (InsertCategoryResponse);
  rpc LinkBookWithCategory (LinkBookWithCategoryRequest) returns (LinkBookWithCategoryResponse);
}

message InsertCategoryRequest {
  string Name = 1;
}

message InsertCategoryResponse {
  string message = 1;
}

message LinkBookWithCategoryRequest {
  string Name = 1;
  string BookTitle = 2;
}

message LinkBookWithCategoryResponse {
  string message = 1;
}

