syntax = "proto3";

package userpb;

option go_package = "pb/UserService";

service User {
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetUserIdByEmail (GetUserIdByEmailRequest) returns (GetUserIdByEmailResponse);
}

message RegisterUserRequest {
  string Name = 1;
  string Email = 2;
  string Password = 3;
}

message RegisterUserResponse {
  string message = 1;
}

message LoginRequest {
  string Email = 1;
  string Password = 2;
}

message LoginResponse {
  string Token = 1;
}

message GetUserIdByEmailRequest {
  string Email = 1;
}

message GetUserIdByEmailResponse {
  string Id = 1;
}

